<resources>
    <string name="app_name">Gentlepad</string>
    <string name="app_title">Gentlepad</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_notes_description">Enter notes description</string>
    <string name="btn_text_cancel">Cancel</string>
    <string name="btn_text_save">Save</string>
    <string name="btn_text_back">Back</string>
    <string name="btn_text_edit">Edit</string>
    <string name="notes_title">Notes Title</string>
    <string name="dummy_date">24 June 2019 09:49 PM</string>
    <string name="add_new_notes">Add new note</string>
    <string name="settings">Settings</string>
    <string name="you_haven_t_added_any_notes_yet">Welcome to Gentlepad. \n\nGentlepad helps to add notes and save it without hassles. Quickly write and save important notes and access it offline. \n \nClick (+) to add new note.</string>
    <string name="could_note_sort_no_notes">Could not sort. No notes found.</string>
    <string name="sort_a_z">Sort A - Z</string>
    <string name="sort_z_a">Sort Z - A</string>
    <string name="date_modified">Date Modified</string>
</resources>
