<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_470sdp"
            android:layout_margin="@dimen/margin_total"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_notes_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_light_red"
                android:cursorVisible="true"
                android:focusable="true"
                android:hint="@string/enter_title"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:nextFocusDown="@+id/et_notes_desc"
                android:paddingLeft="@dimen/_4sdp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingRight="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:textColor="@color/text_color"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/et_notes_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|start"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@color/background_light_red"
                android:cursorVisible="true"
                android:focusable="true"
                android:gravity="start|left"
                android:hint="@string/enter_notes_description"
                android:inputType="textMultiLine"
                android:paddingLeft="@dimen/_4sdp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingRight="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:scrollbars="vertical"
                android:textColor="@color/text_color"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_save_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_total"
            android:layout_marginRight="@dimen/margin_total"
            android:layout_marginBottom="@dimen/_5sdp"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/btn_background"
                android:clickable="true"
                android:text="@string/btn_text_cancel"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/btn_background"
                android:clickable="true"
                android:text="@string/btn_text_save"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_edit_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_total"
            android:layout_marginRight="@dimen/margin_total"
            android:layout_marginBottom="@dimen/_5sdp"
            android:visibility="gone"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/btn_background"
                android:clickable="true"
                android:text="@string/btn_text_back"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/btn_background"
                android:clickable="true"
                android:text="@string/btn_text_edit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>